[package]
name = "divisible-by"
version = "0.1.0"
authors = ["Eric Cornelissen <ericornelissen@gmail.com>"]
edition = "2021"
description = "An experiment in TDD inspired by the Numberphile video 'Why 7 is Weird'"
readme = "README.md"
license = "ISC"
publish = false

[dependencies]

[dev-dependencies]
bencher = "0.1.5"
kani-verifier = "0.20.0"
proptest = "1.0.0"
proptest-attr-macro = "1.0.0"
rstest = "0.13.0"

[[bench]]
name = "utils"
harness = false
